# Graphics-Engine

./: .gitignore  .gitmodules  README.md
RVL/: CMakeLists.txt  Makefile  RVL.dylib  comp.sh  make.sh
RVL/res/shaders/: background.frag  background.vert  main.frag  main.vert  textured.frag  textured.vert
RVL/src/: RVL.hpp
RVL/src/RVL/: EntryPoint.hpp  Macros.hpp  RvlApp.cpp  RvlApp.hpp  Rvlglpch.hpp  Rvlglpch.hpp.gch  Rvlpch.hpp  Window.cpp  Window.hpp
RVL/src/RVL/API/: Input.cpp  Input.hpp  Property.hpp  Random.cpp  Random.hpp  Time.cpp  Time.hpp
RVL/src/RVL/API/Components/: AnimationComponent.cpp  AnimationComponent.hpp  Component.cpp  Component.hpp  MovementComponent.cpp  MovementComponent.hpp  TextureComponent.cpp  TextureComponent.hpp
RVL/src/RVL/API/ECS/: AnimationComponent.cpp  AnimationComponent.hpp  Behaviour.cpp  Behaviour.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  MovementComponent.cpp  MovementComponent.hpp  Scene.cpp  Scene.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TileMapComponent.cpp  TileMapComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
RVL/src/RVL/API/ECS/2D/: AnimationComponent.cpp  AnimationComponent.hpp  Animator2D.cpp  Animator2D.hpp  Movement2D.cpp  Movement2D.hpp  MovementComponent.cpp  MovementComponent.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  Sprite.cpp  Sprite.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TileMap.cpp  TileMap.hpp  TileMapComponent.cpp  TileMapComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
RVL/src/RVL/API/ECS/3D/: DirectionalLight.cpp  DirectionalLight.hpp  DirectionalLightComponent.cpp  DirectionalLightComponent.hpp  Material.cpp  Material.hpp  MaterialComponent.cpp  MaterialComponent.hpp  Model.cpp  Model.hpp  ModelComponent.cpp  ModelComponent.hpp  PointLight.cpp  PointLight.hpp  PointLightComponent.cpp  PointLightComponent.hpp
RVL/src/RVL/API/ECS/General/: Identifier.hpp  IdentifierComponent.hpp  Transform.cpp  Transform.hpp  (+1 more)
RVL/src/RVL/API/Math/: Math.cpp  Vector.cpp  Vector.hpp  math.hpp
RVL/src/RVL/API/Objects/: Entity.cpp  Entity.hpp  Rectangle.cpp  Rectangle.hpp  Renderable.hpp  SceneRenderer.cpp  SceneRenderer.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Sprite.cpp  Sprite.hpp  TileMap.cpp  TileMap.hpp  TileSet.cpp  TileSet.hpp  UserCamera.cpp  UserCamera.hpp  UserOrthographicCamera.cpp  UserOrthographicCamera.hpp  UserPerspectiveCamera.cpp  UserPerspectiveCamera.hpp
RVL/src/RVL/API/Primitives/: Entity.hpp  Rectangle.cpp  Rectangle.hpp
RVL/src/RVL/Core/: App.cpp  App.hpp  Core.hpp  EntryPoint.hpp  Error.cpp  Error.hpp  EventListener.cpp  EventListener.hpp  ImGuiController.cpp  ImGuiController.hpp  Keys.hpp  Macros.hpp  Platform.hpp  Pointers.hpp  RvlApp.cpp  RvlApp.hpp  RvlScene.cpp  RvlScene.hpp  RvlState.cpp  RvlState.hpp  State.cpp  State.hpp  Types.cpp  Types.hpp  Window.cpp  Window.hpp
RVL/src/RVL/Core/UI/: GuiElements.cpp  GuiElements.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  ImGuiWindow.hpp  InspectorWindow.cpp  InspectorWindow.hpp
RVL/src/RVL/Core/Utils/: Files.cpp  Files.hpp  Types.hpp
RVL/src/RVL/Events/: CursorEvents.cpp  CursorEvents.hpp  Event.hpp  EventListener.cpp  EventListener.hpp  Events.hpp  KeyEvents.cpp  KeyEvents.hpp  MouseEvents.cpp  MouseEvents.hpp  WindowEvents.cpp  WindowEvents.hpp
RVL/src/RVL/Rendering/OpenGL/: GLBuffer.cpp  GLBuffer.hpp  GLContext.cpp  GLContext.hpp  GLFrameBuffer.cpp  GLFrameBuffer.hpp  GLIndexBuffer.cpp  GLIndexBuffer.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLTexture.cpp  GLTexture.hpp  GLVertexArray.cpp  GLVertexArray.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp
RVL/src/RVL/Rendering/Renderer/: Camera.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PostProcess.cpp  PostProcess.hpp  RenderApi.cpp  RenderApi.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderEntity.cpp  RenderEntity.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  StandartMeshes.cpp  StandartMeshes.hpp  SubTexture.cpp  SubTexture.hpp  Transform.cpp  Transform.hpp
RVL/standart_assets/shaders/: mesh.vert
RVLEditor/: CMakeLists.txt  editor  imgui.ini  sandbox
RVLEditor/assets/maps/: test.rtlm  test.rtls
RVLEditor/assets/scenes/: Untitled.rscn  Untitled2.rscn  awdawdwadaw.rscn  lol.rscn  particle_test.rscn  rfol.rscn  tilemap_example.rscn
RVLEditor/assets/shaders/: Texture.vert  light.frag  screen.frag
RVLEditor/src/: Editor.cpp  Editor.hpp  EditorState.cpp  EditorState.hpp  GuiElements.cpp  GuiElements.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  InspectorWindow.cpp  InspectorWindow.hpp  Main.cpp  MainState.cpp  MainState.hpp
RVLEditor/standart_assets/shaders/: Texture.frag  light.vert  mesh.frag
RVLMapEditor/: CMakeLists.txt  imgui.ini  roflik.rtlm  roflik.rtls  rvm  sandbox  trees.rtlm
RVLMapEditor/assets/maps/: maprvl.rtlm  maprvl.rtls  test.rtlm  test.rtls  test_layer2.rtlm  test_layer2.rtls
RVLMapEditor/assets/shaders/: Texture.vert
RVLMapEditor/rvmData/: map_editor.rconfig  projects.rconfig  projects.rvm
RVLMapEditor/settings/: map_editor.rconfig  projects.rconfig
RVLMapEditor/src/: ConfigParser.cpp  ConfigParser.hpp  EditorApp.cpp  EditorApp.hpp  Main.cpp  MapEditorApp.cpp  MapEditorApp.hpp  MapEditorState.cpp  MapEditorState.hpp  MapScene.cpp  MapScene.hpp  SceneEditorState.cpp  SceneEditorState.hpp
RVLMapEditor/standart_assets/shaders/: Texture.vert
sandbox/: CMakeLists.txt  Makefile  RVL.dylib  comp.sh  game228  imgui.ini  make.sh  run.sh  sandbox
sandbox/assets/maps/: test.rtlm  test.rtls
sandbox/assets/shaders/: Texture.frag  a.frag  a.vert  light.frag  light.vert  screen.frag  screen.vert  sigma.frag  sigma.vert
sandbox/src/: Game.cpp  Game.hpp  Main.cpp  MainScene.cpp  MainScene.hpp  MainState.cpp  MainState.hpp  Player.cpp  Player.hpp  TestScript.hpp  game.cpp
sandbox/standart_assets/shaders/: mesh.frag  mesh.vert
(+4 files in other folders)
